--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediCareMain">
         <activity
+            android:name=".ScrollingActivity2"
+            android:exported="false"
+            android:label="@string/title_activity_scrolling2"
+            android:theme="@style/Theme.MediCareMain.NoActionBar" />
+        <activity
             android:name=".ScrollingActivity"
             android:exported="false"
             android:label="@string/title_activity_scrolling"
