--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MediCareMain">
+        android:theme="@style/splashScreenTheme">
         <activity
             android:name=".ScrollingActivity2"
             android:exported="false"
