first commit by Fayez

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/splashScreenTheme">
         <activity
+            android:name=".fayez"
+            android:exported="false" />
+        <activity
             android:name=".ScrollingActivity3"
             android:exported="false"
             android:label="@string/title_activity_scrolling3"
